--- a/ms.tex
+++ b/ms.tex
@@ -85,7 +85,9 @@ Mehrdad Mirbabayi\altaffilmark{1} \\
 %
 Aaron Parsons\altaffilmark{?} [Add correct affiliation] \\
 %
-Tony Mroczkowski\altaffilmark{?} [Add correct affiliation]
+Tony Mroczkowski\altaffilmark{?} [Add correct affiliation] \\
+%
+Neil Zimmerman\altaffilmark{5}
 }
 
 \affil{$^1$Astrophysics Department, Institute for Advanced Study,
@@ -96,6 +98,8 @@ Tony Mroczkowski\altaffilmark{?} [Add correct affiliation]
 \affil{$^?$Astronomy Department, UC Berkeley}
 
 \affil{$^?$Naval Research Laboratory}
+
+\affil{$^5$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
 
 
 \vspace{0.5\baselineskip}
