--- a/ms.tex
+++ b/ms.tex
@@ -79,27 +79,31 @@ David S. Spiegel\altaffilmark{1} \\
 %
 {\bf and some order:} \\
 %
-Nikku Madhusudhan\altaffilmark{?} [Add correct affiliation] \\
+Jason Nordhaus\altaffilmark{?} [Add correct affiliation] \\
+%
+Nikku Madhusudhan\altaffilmark{3} \\
 %
 Mehrdad Mirbabayi\altaffilmark{1} \\
 %
-Aaron Parsons\altaffilmark{?} [Add correct affiliation] \\
+Aaron Parsons\altaffilmark{4} \\
 %
-Tony Mroczkowski\altaffilmark{?} [Add correct affiliation] \\
+Tony Mroczkowski\altaffilmark{5} \\
 %
-Neil Zimmerman\altaffilmark{5}
+Neil Zimmerman\altaffilmark{6}
 }
 
 \affil{$^1$Astrophysics Department, Institute for Advanced Study,
   Princeton, NJ 08540}
 
-\affil{$^?$Astronomy Department, University of Cambridge, UK}
+\affil{$^2$Astronomy Department, RIT}
 
-\affil{$^?$Astronomy Department, UC Berkeley}
+\affil{$^3$Astronomy Department, University of Cambridge, UK}
 
-\affil{$^?$Naval Research Laboratory}
+\affil{$^4$Astronomy Department, UC Berkeley}
 
-\affil{$^5$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
+\affil{$^5$Naval Research Laboratory}
+
+\affil{$^6$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
 
 
 \vspace{0.5\baselineskip}
