--- a/ms.tex
+++ b/ms.tex
@@ -79,7 +79,7 @@ David S. Spiegel\altaffilmark{1} \\
 %
 {\bf and some order:} \\
 %
-Jason Nordhaus\altaffilmark{?} [Add correct affiliation] \\
+Jason Nordhaus\altaffilmark{2} \\
 %
 Nikku Madhusudhan\altaffilmark{3} \\
 %
