Added Project Florida Labs to my affiliation.

--- a/ms.tex
+++ b/ms.tex
@@ -75,27 +75,30 @@
 
 \author{
 %
-David S. Spiegel\altaffilmark{1} \\
+David S. Spiegel\altaffilmark{1, 2} \\
 %
 {\bf and some order:} \\
 %
-Jason Nordhaus\altaffilmark{2} \\
+Jason Nordhaus\altaffilmark{3} \\
 %
-Nikku Madhusudhan\altaffilmark{3} \\
+Nikku Madhusudhan\altaffilmark{4} \\
 %
 Mehrdad Mirbabayi\altaffilmark{1} \\
 %
-Aaron Parsons\altaffilmark{4} \\
+Aaron Parsons\altaffilmark{5} \\
 %
-Tony Mroczkowski\altaffilmark{5} \\
+Tony Mroczkowski\altaffilmark{6} \\
 %
-Neil Zimmerman\altaffilmark{6}
+Neil Zimmerman\altaffilmark{7}
 }
 
 \affil{$^1$Astrophysics Department, Institute for Advanced Study,
   Princeton, NJ 08540}
 
-\affil{$^2$Astronomy Department, RIT}
+\affil{$^2$Research \& Development, Project Florida Labs,
+  New York, NY  10001}
+
+\affil{$^2$Department of Mathematics, Rochester Institute of Technology}
 
 \affil{$^3$Astronomy Department, University of Cambridge, UK}
 
