--- a/ms.tex
+++ b/ms.tex
@@ -10,8 +10,11 @@
 \usepackage{array}
 \usepackage{appendix}
 \usepackage{comment}
+\usepackage{color}
 
 \bibliographystyle{apj}
+
+\def\memo#1{\color{red}$[${\bf #1}$]$ \color{black}}
 
 \def\plotonesc#1{\centering \leavevmode
 \includegraphics[clip=, width=1.70\columnwidth]{#1}}
@@ -70,7 +73,7 @@
 %%% Begin front material
 %\twocolumn[%%% Begin front material
 
-\title{Red-Giant Hot Jupiters: Brilliant Radio Beacons}
+\title{Red-Giant Hot Jupiters: Brilliant Radio Emitter?}
 
 
 \author{
@@ -137,34 +140,176 @@ dave@ias.edu
 \section{Introduction}
 \label{sec:intro}
 
+Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
+It has been known that Jupiter emits radio wave around 20 MHz due to the interaction with plasmas from the satellite Io \memo{?}, and 100-3000 MHz, which is cyclotron radiation from electrons that are accelerated in Jupiter's magnetic field \memo{?}. 
+Similarly, large exoplanets can emit radio waves, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
+Radio emission from exoplanets have been estimated taking account of several possible processes \citep{griebmeier2007}, and the search for these radio signatures are being conducted. 
+%In general, there are four proposed models for a planet to emit radio wave \citep{griebmeier2007}: 1) the magnetic energy model, 2) kinetic energy model, 3) CME model, and 4) the unipolar interaction model. 
+%The search for these radio emissions from extrasolar Jovian planets has been performed. 
+While some indications were obtained \memo{?} \citep{lecavelier_et_al2013},  there is no clear detection claimed so far. 
+
+
+%It has been predicted that
 % fix
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) when their radii and luminosities
-increase by orders of magnitude.  Jovian planets in orbit around such
+increase by orders of magnitude. 
+
+
+
+Not only luminous, red giants lose their masses at high rate, typically $\sim  10^{-8} M_{\odot }$/yr \citep{judge1991} \memo{How these values are observationally obtained?} \memo{Dave mentioned $\sim  10^{-5} M_{\odot }$/yr, where does this come from?} through massive (but slow) stellar wind \citep{suzuki2008} \memo{cite more papers?}. 
+Jovian planets in orbit around such
 stars can be transiently heated to hot-Jupiter temperatures
 ($\sim$1000~K or more) at distances out to tens of AU, depending on
-the star's mass.  These planets' existence was predicted by
+the star's mass. These planets' existence was predicted by
 \citet{spiegel+madhusudhan2012} and we will refer to them as
-``red-giant hot Jupiters'' (RGHJs).
+``red-giant hot Jupiters'' (RGHJs). 
+When massive stellar wind reach the planetary magnetosphere standoff points  \memo{??}, they presumably deposit part of their energy generating bright radio emission. 
+In this paper, we examine the radio brightness of RGHJs. 
 
-Roughly 20\% of the more than 700 currently known
-exoplanets\footnote{See online catalogs such as
-  http://www.openexoplanetcatalogue.com/ \citep{rein2012},
-  http://exoplanet.eu \citep{schneider_et_al2011}, or
-  http://exoplanets.org \citep{wright_et_al2011} for up-to-date
-  lists.} have masses greater than half of Jupiter's, orbital radii
-greater than 1~AU, and will become hot Jupiters (i.e., for the present
-purposes, this means they will receive at least as much irradiation as
-the hot Neptune
+
+%Red giants lose their masses at a high rate, typically $\sim  10^{-5} M_{\odot }/yr $ through massive stellar wind. These stellar wind particle can 
+
+
+%Roughly 20\% of the more than 700 \memo{check!} currently known exoplanets around main-sequence stars \footnote{See online catalogs such as http://www.openexoplanetcatalogue.com/ \citep{rein2012}, http://exoplanet.eu \citep{schneider_et_al2011}, or http://exoplanets.org \citep{wright_et_al2011} for up-to-date lists.} have masses greater than half of Jupiter's, orbital radii greater than 1~AU, and will become hot Jupiters (i.e., for the present purposes, this means they will receive at least as much irradiation as the currently known hot Jupiters/Neptunes \citep{spiegel+madhusudhan2012}. 
+
+
+
+\section{Assumpsions}
+
+\subsection{Mechanisms}
+
+
+\subsection{Properties for Stellar Wind of RGs}
+
+The mass loss rate of the stellar wind can be estimated from observation \memo{How?}. For the known red giants, the values are typically $\dot M \sim 10^{-8} M_{\odot}$/yr, significantly greater than the solar mass-loss rate $\sim 10^{-14} M_{\odot}$/yr. 
+\begin{equation}
+\frac{\dot M}{\dot M_{\odot}} \sim 10^6
+\end{equation}
+
+The stellar wind velocity is smaller because of the small escape velocity (due to expanded stellar radius)\footnote{Escape velocity is $\sqrt{2GM/r}$.}. Assuming that the stellar wind scales as the escape velocity, RGs with radius $R=100R_{\odot}$ have 10 times as slow stellar wind as that at the main sequence.
+\begin{equation}
+\frac{v}{v_{\odot}} \sim 10^{-1}
+\end{equation}
+
+The temperature of stellar wind of RGs is expected to be 2 orders of magnitude lower than their main sequence counterparts, mainly because the sound speed of hot corona exceeds the escape speed, i.e., hot corona cannot be confined in the stellar atmosphere \citep{suzuki2008}. 
+\begin{equation}
+\frac{T}{T_{\odot}} \sim 10^{-2}
+\end{equation}
+
+
+\subsection{Properties for Planetary Magnetic Field}
+
+Scaling of magnetic field is found at
+\citet{griebmeier2007}
+\citet{griebmeier2004}
+
+Unlike usual hot jupiters, RGHJs are not subject to tidal lock, because the gravitational effects of their host star does not change even if the star evolves into red giants. 
+
+For the moment, let us assume Jovian magnetic field strength. 
+
+
+\section{Estimates of Radio Emission from RGHJ}
+
+\subsection{Estimates of frequency}
 
 The cyclotron frequency is
 \begin{equation}
-f_{\rm cyclotron} = \frac{eB}{2\pi m_e c} \approx 2.8 {\rm~MHz} \left( \frac{B}{1 \rm~G} \right) \, .
+f_{\rm cyclotron} = \frac{eB}{2\pi m_e c} \approx 28 {\rm~MHz} \left( \frac{B}{10 \rm~G} \right) \, .
 \label{eq:cyc}
 \end{equation}
 For magnetic field strengths in the vicinity of $\sim$25-50~Gauss (G),
 the cyclotron frequency will be in the range $\sim$75-150~MHz.
+
+The emission is observable only when the maximum frequency is larger than the plasma frequency of the surrounding stellar wind. 
+The plasma frequency is 
+\begin{eqnarray}
+f_{\rm plasma} &=& \frac{1}{2\pi} \sqrt{\frac{ne^2}{\epsilon _0 m_e}} \\
+&\approx & 4\mbox{MHz} \left( \frac{\dot M}{10^6 \dot M_{\odot}}\right)^{1/2} \left(\frac{v}{10^{-1} v_{\odot}}  \right)^{-1/2}
+\end{eqnarray}
+
+...OK!\memo{double-check}
+
+\subsection{Estimates of intensity}
+
+According to \citet{griebmeier2007} \memo{The following equations are quoted from the paper. Needs to elaborate. }
+\begin{enumerate}
+\item kinetic energy model
+\begin{equation}
+P_{\rm inp} \propto n v^3 r_s ^2 \label{eq:Pinp_kin}
+\end{equation}
+\item magnetic energy model:
+\begin{equation}
+P_{\rm inp} \propto v B_{\bot }^2 r_s ^2 \label{eq:Pinp_mag}
+\end{equation}
+\item CME model\\
+Not sure about CME for red giants. We don't consider?
+\item the unipolar interaction model\\
+??
+\end{enumerate}
+where $n$ and $v$ are density and velocity of stellar wind, respectively,  $ B_{\bot }$ is the interstellar magnetic field perpendicular to the stellar wind flow, and $r_s$ is the radius of magnetic standoff point. 
+
+$r_s$ is determined by the balance between the magnetic pressure of planetary magnetosphere and kinetic pressure of stellar wind\footnote{Precisely, the magnetic standoff point is described by equation (9) of \citet{griebmeier2007}, which is. 
+\begin{equation}
+r_s = \left[ \frac{\mu_0 f_0^2 \mathcal{M}}{8\pi^2 (m_p n(d) v(d)^2 + 2 n(d) k_B T)} \right]^{1/6}
+\end{equation}
+where $\mathcal{M}$ is the planetary magnetic moment and $m_p$ is the proton mass. 
+In the following arguments based on Dave's sketch, the second term in the denominator is ignored. This is valid for Solar wind where the first term is larger than the second term by 2 orders of magnitude. \memo{check!}}. Thus, 
+\begin{equation}
+\frac{m_p n v ^2}{2} = \frac{B^2}{2\pi}\left( \frac{r_s}{R_p} \right)^{-6} 
+\end{equation}
+Therefore,
+\begin{eqnarray}
+r_s &=& R_p \left( \frac{B^2}{\pi \dot M v (1/4\pi d^2)} \right)^{1/6} = R_p \left( \frac{4 B^2 d^2}{\dot M v } \right)^{1/6} \\
+&\approx & 5 R_J \left(\frac{B}{10 \mbox{[G]}}\right)^{1/3} \left(\frac{\dot M}{10^6 \dot M_{\odot}}\right)^{-1/6}\\
+&& \;\;\;\;\; \;\;\;\;\; \times \left(\frac{v}{10^{-1} v_{\odot}}\right)^{-1/6}  \left(\frac{d}{5 \mbox{[AU]}}\right)^{1/3} 
+\end{eqnarray}
+
+Therefore, the radio emission expected from kinetic energy model (equation (\ref{eq:Pinp_kin})) is 
+\begin{eqnarray}
+P_{\rm inp} &=& P_{\rm inp, J} \left(\frac{\dot M }{\dot M_{\odot }} \right) \left(\frac{v}{v_{\odot}} \right) ^2 \left(\frac{d}{5 \rm{AU}} \right) ^{-2}  \left(\frac{r_s}{r_{s, {\rm J}}} \right)^2 \\
+&=& P_{\rm inp, J} \left(\frac{\dot M }{\dot M_{\odot }} \right)^{\frac{2}{3}} \left(\frac{v}{v_{\odot}} \right) ^{\frac{5}{3}} \left(\frac{d}{5 \rm{AU}} \right) ^{-2} \left(\frac{B}{B_J} \right)^{\frac{2}{3}} \\
+&\approx& 200 P_{\rm inp, J} \left(\frac{\dot M }{10^6 \dot M_{\odot }} \right)^{\frac{2}{3}} \left(\frac{v}{10^{-1} v_{\odot}} \right) ^{\frac{5}{3}} \\
+&& \;\;\;\;\; \;\;\;\;\; \times \left(\frac{d}{5 \rm{[AU]}} \right) ^{-4/3} \left(\frac{B}{10 \mbox{[G]}} \right)^{\frac{2}{3}} \
+\end{eqnarray}
+
+
+\memo{Following arguments are based on \citep{griebmeier2007}. }
+Assuming $P_{\rm inp, J} = 2.1\times 10^{11}$ W \citep{griebmeier2007}, observed RGHJ radio emission at distance $l$ is
+\begin{eqnarray}
+P_{\rm ons} &=& \frac{P_{\rm radio}}{\Omega l^2 f_{\rm cyclotron}} \\
+&\approx & 5\times 10^{-6} \mbox{Jy} \left( \frac{P_{\rm radio}}{P_{\rm radio, J}} \right) \left( \frac{l}{10\mbox{[pc]}} \right)^{-2} \left( \frac{B}{10\mbox{[G]}} \right) ^{-1} \\
+&\approx & 10^{-3} \mbox{Jy} \left( \frac{P_{\rm radio}}{200 P_{\rm radio, J}} \right) \left( \frac{l}{10\mbox{[pc]}} \right)^{-2} \left( \frac{B}{10\mbox{[G]}} \right) ^{-1}
+\end{eqnarray}
+where $\Omega $ is the solid angle of emission, which is assumed $\Omega = 1.6$. 
+
+
+
+
+\subsection{Will the electron spiraling and offset the magnetic field? (Mehrdad Mirababayi)}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section{Discussion on Observability}
+
+\subsection{Radio emission from red giants stars}
+
+(Jason)
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\citet{gorman2013}
+
+
+\subsection{Expected population of RGHJ in the observable volume}
+
+
+
+
+\section{Dave's sketch}
 
 \citep{spiegel2008}
 
@@ -184,7 +329,7 @@ the cyclotron frequency will be in the range $\sim$75-150~MHz.
 
 \citep{nordhaus+spiegel2013}
 
-\citep{spiegel+madhusudhan2012}
+
 
 \citep{jiang+jin1996}: 12cm radio of Jupiter during Shoemake-Levy-9
 
@@ -290,6 +435,10 @@ The power incident on the planet is
 %ftp://ftp.iwf.oeaw.ac.at/pub/Scherf/PRE-CD%20V2/pre6/nigl.pdf
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
 \label{sec:conc}
 
@@ -306,7 +455,9 @@ from the AMIAS group.  NM acknowledges support from [???].
 \newpage
 
 mehrdad
+
 \newpage
+
 \bibliography{biblio.bib}
 
 
