--- a/ms.tex
+++ b/ms.tex
@@ -148,38 +148,32 @@ dave@ias.edu
 \label{sec:intro}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
-It has been known that Jupiter emits radio wave around 20 MHz due to the interaction with plasmas from the satellite Io \memoYF{?}, and 100-3000 MHz, which is cyclotron radiation from electrons that are accelerated in Jupiter's magnetic field \memoYF{?}. 
-Similarly, large exoplanets can emit radio waves, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
-Radio emission from exoplanets have been estimated taking account of several possible processes \citep{griebmeier2007}, and the search for these radio signatures are being conducted. 
+It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to the acceleration of the plasmas. \memoYF{?}. Potentially, large exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
+Radio emissions from exoplanets have been estimated taking account of several possible processes, based on the empirical scaling of the radio intensity with the solar wind flux \citep{zarka2001,griebmeier2007,noyola2013}. 
+Although the search for these radio signatures are being conducted, there is no clear detection claimed so far, while some indications were obtained \memoYF{?} \citep{lecavelier_et_al2013}. 
 %In general, there are four proposed models for a planet to emit radio wave \citep{griebmeier2007}: 1) the magnetic energy model, 2) kinetic energy model, 3) CME model, and 4) the unipolar interaction model. 
 %The search for these radio emissions from extrasolar Jovian planets has been performed. 
-While some indications were obtained \memoYF{?} \citep{lecavelier_et_al2013},  there is no clear detection claimed so far. 
 
 
 %It has been predicted that
 % fix
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
-asymptotic-giant branch (AGB) when their radii and luminosities
-increase by orders of magnitude. 
+asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
+Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citet{spiegel+madhusudhan2012}. 
+At the same time, they are subject to massive stellar wind, because the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, typically $\sim  10^{-8} M_{\odot }$/yr \citep{judge1991}. \memoYF{How these values are observationally obtained?} \memoYF{Dave mentioned $\sim  10^{-5} M_{\odot }$/yr, where does this come from?} through massive (but slow) stellar wind \citep{suzuki2008} \memoYF{cite more papers?}. 
+On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission. 
 
+In this paper we propose the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
+The search for such emission could tell us the population of companions around evolved stars, including those were originally A or O stars. 
 
-
-
-Not only luminous, red giants lose their masses at high rate, typically $\sim  10^{-8} M_{\odot }$/yr \citep{judge1991} \memoYF{How these values are observationally obtained?} \memoYF{Dave mentioned $\sim  10^{-5} M_{\odot }$/yr, where does this come from?} through massive (but slow) stellar wind \citep{suzuki2008} \memoYF{cite more papers?}. 
-
-Jovian planets in orbit around such
-stars can be transiently heated to hot-Jupiter temperatures
-($\sim$1000~K or more) at distances out to tens of AU, depending on
-the star's mass. These planets' existence was predicted by
-\citet{spiegel+madhusudhan2012} and we will refer to them as
-``red-giant hot Jupiters'' (RGHJs). 
-When massive stellar wind reach the planetary magnetosphere standoff points  \memoYF{??}, they presumably deposit part of their energy generating bright radio emission. 
-
-In this paper, we examine the radio brightness of RGHJs, taking account of the increased stellar wind. 
-
-
+In \S2, we discuss the assumption we make in this paper. 
+\S3, we provide the estimates. 
+\S4, we examine the possible obstacles to detect radio emission from the companion, taking account of the intrinsic radio emission of the evolved stars...
+% based on the number of targets in the observable volumes
 
 
 %Red giants lose their masses at a high rate, typically $\sim  10^{-5} M_{\odot }/yr $ through massive stellar wind. These stellar wind particle can 
@@ -197,6 +191,13 @@ In this paper, we examine the radio brightness of RGHJs, taking account of the i
 \subsection{Mechanisms}
 \label{ss:mechanisms}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+Radio emission intensity of Solar System giant planets are known to be proportional to the kinetic energy or the magnetic energy of the solar wind,  which interacts with planetary magnetic field at the magnetic standoff cross section\memoYF{``radio Bode's law'': cite something}. 
+
+Unfortunately, the detail of the mechanism of energy transport from the energy source into the radio emission. 
+
+
 
 
 According to \citet{griebmeier2007} \memoYF{The following equations are quoted from the paper. Needs to elaborate. }
